added html and css and sat in controller! 14 | 11 | 2023